Covrr-Web-App/manifestfiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      imagePullSecrets:
        - name: harbor-registry-web
      containers:
        - name: web-app-container
          image: harbor.driif.ai/web_testing/web:1  # Replace with the actual image URL 
          ports:
            - containerPort: 80  # Replace with the port your app listens on
 
---
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: web-app
  labels:
    app: web-app
spec:
  type: ClusterIP
  ports:
    - port: 80  # The port on which the Service will be exposed internally
      targetPort: 80  # The port on which the container is listening
  selector:
    app: web-app  # Matches the labels of the Pods created by the Deployment
